--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="page-container">
-        <div class="header-container">
-            <div class="header">
-                <h3>Übung-App</h3>
-            </div>
+    <div class="header-container">
+        <div class="box form-box">
+            <header>Übung-App</header>
         </div>
-        <br>
-        <main id="content">
-            <!-- Hier der Link  ↓   für die Startseite -->
-            <iframe src="/iframes/dashboard.html" id="myHtml"></iframe>
-        </main>
-        <br>
+    </div>
+
+    <main id="content">
+        <!-- Hier der Link  ↓   für die Startseite -->
+        <iframe src="/iframes/dashboard.html" id="myHtml"></iframe>
+    </main>
+
+    <div class="wrapper">
         <div class="footer-container">
-            <ul class="footer">
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Scoreboard</a></li>
-                <li><a href="#">Profil</a></li>
-            </ul>
-        </div>
+            <div class="box form-box">
+                <ul class="footer">
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">Scoreboard</a></li>
+                    <li><a href="#">Profil</a></li>
+                </ul>
+            </div>
+        </div> 
     </div>
     
     <script src="script.js"></script>
