Lehrer Sicht und Namen der App hinzugefügt StudyZone

--- a/lehrer/iframes/profil.html
+++ b/lehrer/iframes/profil.html
@@ -8,8 +8,7 @@
         <p>Username: </p>
         <p>E-Mail: </p>
         <br>
-        <p>Punkte: </p>
-        <p>Gelöste Aufgaben: </p>
+        <p>Aufgaben erstellt: </p>
         <br><br>
         <!--
           TODO: Einstellungen bearbeiten
