--- a/lehrer/lehrer-sicht.html
+++ b/lehrer/lehrer-sicht.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudyZone</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="header-container">
         <div class="box form-box">
-            <header>StudyZone - Schüler</header>
+            <header>StudyZone - Lehrer</header>
         </div>
     </div>
 
     <main id="content">
         <!-- Hier der Link  ↓   für die Startseite -->
-        <iframe src="/iframes/dashboard.html" id="myHtml"></iframe>
+        <iframe src="/lehrer/iframes/profil.html" id="myHtml"></iframe>
     </main>
 
     <div class="wrapper">
@@ -23,13 +23,13 @@
             <div class="box form-box">
                 <ul class="footer">
                     <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Scoreboard</a></li>
+                    <li><a href="#">Erstellen</a></li>
                     <li><a href="#">Profil</a></li>
                 </ul>
             </div>
         </div> 
     </div>
     
-    <script src="script.js"></script>
+    <script src="lehrer.js"></script>
 </body>
 </html>
