Startseite, Fehler behoben
Startseite hinzugefügt und Fehler behoben

--- a/lehrer/lehrer-sicht.html
+++ b/lehrer/lehrer-sicht.html
@@ -15,7 +15,7 @@
 
     <main id="content">
         <!-- Hier der Link  ↓   für die Startseite -->
-        <iframe src="/lehrer/iframes/profil.html" id="myHtml"></iframe>
+        <iframe src="/lehrer/iframes/dashboard.html" id="myHtml"></iframe>
     </main>
 
     <div class="wrapper">
