Startseite verbessert & Kontakt erstellt

--- a/login/login.html
+++ b/login/login.html
@@ -15,6 +15,7 @@
 
             <button type="submit">Anmelden</button>
             <a href="#" class="forgot-password">Passwort vergessen?</a>
+            <a href="/Start/Startseite.html" class="forgot-password">Zurück</a>
             <button type="button" class="create-account" onclick="showSignup()">Account erstellen</button>
         </form>
     </div>
