--- a/start/Startseite.html
+++ b/start/Startseite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudyZone</title>
-    <link rel="stylesheet" href="/Start/style.css">
+    <link rel="stylesheet" href="/start/style.css">
 </head>
 <body>
     <header>
