--- a/start/kontakt.html
+++ b/start/kontakt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudyZone</title>
-    <link rel="stylesheet" href="/Start/style.css">
+    <link rel="stylesheet" href="/start/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
