--- a/start/kontakt.html
+++ b/start/kontakt.html
@@ -16,18 +16,18 @@
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
                     </a>
                 </li>
-                <li><a href="/Start/download.html">Download</a></li>
-                <li><a href="/Start/updates.html">Updates</a></li>
-                <li><a href="/Start/feedback.html">Feedback</a></li>
-                <li><a href="/Start/kontakt.html">Kontakt</a></li>
+                <li><a href="/start/download.html">Download</a></li>
+                <li><a href="/start/updates.html">Updates</a></li>
+                <li><a href="/start/feedback.html">Feedback</a></li>
+                <li><a href="/start/kontakt.html">Kontakt</a></li>
                 <li><a href="/login/login.html">Login</a></li>
             </ul>
             <ul>
                 <h1>StudyZone</h1>
-                <li class="hideOnMobile"><a href="/Start/download.html">Download</a></li>
-                <li class="hideOnMobile"><a href="/Start/updates.html">Updates</a></li>
-                <li class="hideOnMobile"><a href="/Start/feedback.html">Feedback</a></li>
-                <li class="hideOnMobile"><a href="/Start/kontakt.html">Kontakt</a></li>
+                <li class="hideOnMobile"><a href="/start/download.html">Download</a></li>
+                <li class="hideOnMobile"><a href="/start/updates.html">Updates</a></li>
+                <li class="hideOnMobile"><a href="/start/feedback.html">Feedback</a></li>
+                <li class="hideOnMobile"><a href="/start/kontakt.html">Kontakt</a></li>
                 <li class="hideOnMobile"><a href="/login/login.html">Login</a></li>
                 <li class="menu-button" onclick="showSidebar()">
                     <a href="#">
@@ -72,6 +72,6 @@
         </div>
     </footer>
 
-    <script src="/Start/script.js"></script>
+    <script src="/start/script.js"></script>
 </body>
 </html>
