--- a/start/download.html
+++ b/start/download.html
@@ -37,8 +37,19 @@
         </nav>
     </header>
 
-    <main id="content">
-        <h1>Download</h1>
+    <main class="download">
+        <main class="download">
+            <h1>Lerne schneller mit der StudyZone App</h1>
+        
+            <div class="download-container">
+                <a href="https://play.google.com/store" target="_blank">
+                    <img src="/img/Play-Store.webp" width="500px" alt="Download auf Play Store">
+                </a>
+                <a href="https://www.apple.com/app-store/" target="_blank">
+                    <img src="/img/App-Store.png" width="510px" alt="Download auf App Store">
+                </a>
+            </div>
+        </main>
     </main>
 
     <footer>
