--- a/start/kontakt.html
+++ b/start/kontakt.html
@@ -50,10 +50,10 @@
             </div>
 
             <div class="media-buttons">
-                <a href="#" style="background: #e1306c;" class="link">
+                <a href="https://www.instagram.com/marci001_1/" style="background: #e1306c;" class="link">
                     <i class='bx bxl-instagram'></i>
                 </a>
-                <a href="#" style="background: #ff0000;" class="link">
+                <a href="https://www.youtube.com/@Marci001_" style="background: #ff0000;" class="link">
                     <i class='bx bxl-youtube'></i>
                 </a>
             </div>
