--- a/index.html
+++ b/index.html
@@ -7,29 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header-container">
-        <div class="box form-box">
-            <header>StudyZone - Schüler</header>
-        </div>
+    <div class="header">
+        <h2>StudyZone - Schüler</h2>
     </div>
-    
-    <main id="content">
+
+    <div class="content">
         <!-- Hier der Link  ↓   für die Startseite -->
         <iframe src="/iframes/dashboard.html" id="myHtml"></iframe>
-    </main>
-
-    <div class="wrapper">
-        <div class="footer-container">
-            <div class="box form-box">
-                <ul class="footer">
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Scoreboard</a></li>
-                    <li><a href="#">Profil</a></li>
-                </ul>
-            </div>
-        </div> 
     </div>
-    
+
+    <div class="footer">
+        <ul>
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="#">Scoreboard</a></li>
+            <li><a href="#">Profil</a></li>
+        </ul>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
