--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>StudyZone - Schüler</h2>
     </div>
 
-    <div class="content">
+    <div class="content" id="iframeContainer">
         <!-- Hier der Link  ↓   für die Startseite -->
         <iframe src="/iframes/dashboard.html" id="myHtml"></iframe>
     </div>
