--- a/iframes-handy/dashboard.html
+++ b/iframes-handy/dashboard.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html lang="de">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/iframes/style.css">
 </head>
 <body>
@@ -23,7 +27,7 @@
     </div>
     
     <div class="div-dashboard-nebenfächer">
-        <h2>Nebenfächer Handy</h2>
+        <h2>Nebenfächer</h2>
 
         <div class="div-dashboard">
             <li><a href="#">IT</a></li>
@@ -34,4 +38,4 @@
         </div>
     </div>
 </body>
-  
+</html>
