--- a/iframes-handy/profil.html
+++ b/iframes-handy/profil.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
+<html lang="de">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/iframes/style.css">
 </head>
 <body>
     <div class="div-profil">
-        <h1>Profil Handy</h1>
+        <h1>Profil</h1>
         <p>Name: </p>
         <p>Username: </p>
         <p>E-Mail: </p>
@@ -17,3 +21,4 @@
         <a href="#">Einstellungen Link zum Anpassen</a>
     </div>
 </body>
+</html>
