--- a/iframes/profil.html
+++ b/iframes/profil.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html lang="de">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/iframes/style.css">
 </head>
 <body>
@@ -17,3 +21,4 @@
         <a href="#">Einstellungen Link zum Anpassen</a>
     </div>
 </body>
+</html>
