--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="content" id="iframeContainer">
         <!-- Hier der Link  ↓   für die Startseite -->
-        <iframe src="/iframes/dashboard.html" id="myHtml"></iframe>
+        <iframe id="myHtml"></iframe>
     </div>
 
     <div class="footer">
