--- a/iframes/dashboard.html
+++ b/iframes/dashboard.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html lang="de">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/iframes/style.css">
 </head>
 <body>
@@ -34,4 +38,4 @@
         </div>
     </div>
 </body>
-  
+</html>
