--- a/iframes/scoreboard.html
+++ b/iframes/scoreboard.html
@@ -1,10 +1,8 @@
-<!--
-  TODO: Man kann den Namen/Zeile auf dem Scoreboard Antippen und 
-        dann kann man das Profil von einem sehen
-        Es soll wie ein Pop Up rauskommen
-        Mann kann aber beim Scoreboard auch noch nach unten scrollen
--->
+<!DOCTYPE html>
+<html lang="de">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/iframes/style.css">
 </head>
 <body>
@@ -42,4 +40,12 @@
         <li><p>1:42 Min.</p></li>
         <li><p>17</p></li>
     </div>
+
+    <!--
+  TODO: Man kann den Namen/Zeile auf dem Scoreboard Antippen und 
+        dann kann man das Profil von einem sehen
+        Es soll wie ein Pop Up rauskommen
+        Mann kann aber beim Scoreboard auch noch nach unten scrollen
+    -->
 </body>
+</html>
