--- a/lehrer/profil.html
+++ b/lehrer/profil.html
@@ -26,9 +26,9 @@
 
     <div class="footer">
         <ul>
-            <li><a href="/schueler/index.html">Dashboard</a></li>
-            <li><a href="/schueler/scoreboard.html">Scoreboard</a></li>
-            <li><a href="/schueler/profil.html">Profil</a></li>
+            <li><a href="/lehrer/index.html">Dashboard</a></li>
+            <li><a href="/lehrer/erstellen.html">Erstellen</a></li>
+            <li><a href="/lehrer/profil.html">Profil</a></li>
         </ul>
     </div>
 </body>
