--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </style>
 </head>
 <body>
+    <!-- Wartet 5 Sekunden -->
     <div>
         <img src="/picture/StudyZone.png" alt="Logo">
     </div>
