--- a/aufgaben/bearbeiten.html
+++ b/aufgaben/bearbeiten.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudyZone</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/aufgaben.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/aufgaben.css">
 </head>
 <body>
     <div class="header">
@@ -28,9 +28,9 @@
 
     <div class="footer">
         <ul>
-            <li><a href="/schueler/index.php">Dashboard</a></li>
-            <li><a href="/schueler/scoreboard.php">Scoreboard</a></li>
-            <li><a href="/schueler/profil.php">Profil</a></li>
+            <li><a href="../schueler/index.php">Dashboard</a></li>
+            <li><a href="../schueler/scoreboard.php">Scoreboard</a></li>
+            <li><a href="../schueler/profil.php">Profil</a></li>
         </ul>
     </div>
 </body>
